# realworld-actix-fullstack

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  Secrets.toml.example  Shuttle.toml  sqlx-data.json
.github/workflows/: shuttle.yml
.sqlx/: query-2aacc0949964d9ea023557a92bb33bdc7f1822583c91d2ce8be6cbc215d80b31.json  query-3361fd7637ddaec367278ed6f74dd29271bc902138c8f4fdcc6ace031eb568c7.json  query-5309cf73b61428194f3b8ea3692850cfa816436e178f5120ed830f86488f49c3.json  query-5fbd37fc15396606dfff3ccbfb9c05a3f9cf3cda84211b3a1025b7a450ce54c2.json  query-677b8db593a24ea9927f6f214336b216e98c540cb797994721a35e15788f4c10.json  query-7ab30b9e8362e6e8efe06250f52aba7d5282830ebeb6c5d7a83462fa6a49babf.json  query-8c93955407b6d49c5a5681dc6fd26310a72de4291e02741d54882f48c9cdd2e3.json  query-9711de803e4fcb6b9a08b56f9ab04cc4b1a0bc6e2111c8062bb6100626f533dd.json  query-97c8d576563e115aaf94b57b8e6fd8c1dbaba18e6745e039d1becd4e3acb32bf.json  query-ac58be99f73eab96cba3bf8eb641f0aaecea92ca3b5e974e5b5c19009eefbe55.json  query-d73579546fe5de67318c1c9148344f4010fb83459ba2d8becb6bb704d5dc1eda.json  query-e9b6440dbd53afc5d6d50ea4633f92be3aaa2d7376bd19d1cdf3ccae8c71e210.json
migrations/: 20221207194615_init.sql  20221207194615_init.up.sql
src/: auth.rs  errors.rs  lib.rs  main.css  main.rs  state.rs  template.rs  utils.rs
src/routing/: article.rs  comments.rs  db_models.rs  editor.rs  error.rs  index.rs  login.rs  logout.rs  mod.rs  profile.rs  register.rs  settings.rs
templates/: article.j2  editor.j2  error.j2  index.j2  layout.j2  login.j2  profile.j2  register.j2  settings.j2
tests/server/: helper.rs  (+2 more)
(+2 files in other folders)
