[package]
name = "realworld-rust-fullstack"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-session = { version = "0.8", features = ["cookie-session"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
] }
chrono = { version = "0.4", features = ["serde"] }
tokio = "1"
tera = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

shuttle-runtime = "0.28"
shuttle-actix-web = "0.28"
shuttle-shared-db = { version = "0.28", features = ["postgres"] }
shuttle-secrets = "0.28"
