[package]
name = "realworld-rust-fullstack"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-session = { version = "0.10", features = ["cookie-session"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
] }
tera = "1"
serde = { version = "1", features = ["derive"] }
regex = "1"

shuttle-runtime = "0.49.0"
shuttle-actix-web = "0.49.0"
shuttle-shared-db = { version = "0.49.0", features = ["postgres", "sqlx"] }
