[package]
name = "realworld-rust-fullstack"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-session = { version = "0.11", features = ["cookie-session"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
] }
tera = "1"
serde = { version = "1", features = ["derive"] }
regex = "1"
dotenvy = "0.15"
